[package]
name = "sm2"
version = "0.14.0-rc.3"
description = """
Pure Rust implementation of the SM2 elliptic curve as defined in the Chinese
national standard GM/T 0003-2012 as well as ISO/IEC 14888. Includes support for
the SM2DSA Digital Signature Algorithm.
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sm2"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/sm2"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "shangmi", "signature", "encryption"]
edition = "2024"
rust-version = "1.85"

[dependencies]
elliptic-curve = { version = "0.14.0-rc.20", default-features = false, features = ["sec1"] }
fiat-crypto = { version = "0.3", default-features = false }
rand_core = { version = "0.10.0-rc-3", default-features = false }

# optional dependencies
primefield = { version = "0.14.0-rc.3", optional = true }
primeorder = { version = "0.14.0-rc.3", optional = true }
rfc6979 = { version = "0.5.0-rc.3", optional = true }
serdect = { version = "0.4", optional = true, default-features = false }
signature = { version = "3.0.0-rc.6", optional = true, features = ["rand_core"] }
sm3 = { version = "0.5.0-rc.3", optional = true, default-features = false }
der = { version = "0.8.0-rc.10", optional = true }

[dev-dependencies]
hex-literal = "1"
proptest = "1"
getrandom = { version = "0.4.0-rc.0", features = ["sys_rng"] }

[features]
default = ["arithmetic", "dsa", "getrandom", "pke", "pem", "std"]
alloc = ["elliptic-curve/alloc"]
std = ["alloc", "elliptic-curve/std"]

arithmetic = ["dep:primefield", "dep:primeorder", "elliptic-curve/arithmetic"]
bits = ["arithmetic", "elliptic-curve/bits"]
dsa = ["arithmetic", "dep:rfc6979", "dep:signature", "dep:sm3"]
getrandom = ["elliptic-curve/getrandom"]
pke = ["arithmetic", "dep:sm3"]
pem = ["elliptic-curve/pem", "pkcs8"]
pkcs8 = ["elliptic-curve/pkcs8", "der"]
serde = ["elliptic-curve/serde", "primeorder?/serde", "serdect"]

[package.metadata.docs.rs]
all-features = true
