[workspace]
members = [
    "bp384_no_std",
    "k256_no_std",
    "p256_no_std",
    "p384_no_std",
]

[patch.crates-io]
der = { git = "https://github.com/RustCrypto/utils.git" }
ecdsa = { git = "https://github.com/RustCrypto/signatures.git" }
elliptic-curve = { git = "https://github.com/RustCrypto/traits.git" }
