[package]
name = "weierstrass"
version = "0.1.0"
authors = ["RustCrypto Developers"]
edition = "2018"

[dependencies]
generic-array = "0.14"
byteorder = { version = "1", default-features = false }
subtle = { version = "2.3", default-features = false }
rand_core = { version = "0.5", default-features = false }
biguint-literal = { git = "https://github.com/RustCrypto/utils", branch = "biguint" }
hex-literal = "0.3"
