[package]
name = "x448"
version = "0.7.0-pre"
authors = ["RustCrypto Developers"]
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "x448", "diffie-hellman", "curve448",]
homepage = "https://docs.rs/x448/"
repository = "https://github.com/RustCrypto/elliptic-curves/tree/master/x448"
documentation = "https://docs.rs/ed448-goldilocks"
license = "BSD-3-Clause"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
description = "A pure-Rust implementation of X448."

[dependencies]
ed448-goldilocks = { version = "0.14.0-pre.0", default-features = false }
rand_core = { version = "0.9", default-features = false } 

[dependencies.zeroize]
version = "1"
default-features = false
features = ["zeroize_derive"]

[dev-dependencies]
rand = "0.9"
