[package]
name = "x448"
version = "0.14.0-pre.4"
authors = ["RustCrypto Developers"]
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "x448", "diffie-hellman", "curve448", ]
homepage = "https://docs.rs/x448/"
repository = "https://github.com/RustCrypto/elliptic-curves/tree/master/x448"
documentation = "https://docs.rs/ed448-goldilocks"
license = "Apache-2.0 OR MIT"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
description = "Pure Rust implementation of X448, an elliptic curve Diffie-Hellman function"

[dependencies]
ed448-goldilocks = { version = "0.14.0-pre.7", default-features = false }

# optional dependencies
serdect = { version = "0.4", optional = true }

[dependencies.zeroize]
version = "1"
default-features = false
features = ["zeroize_derive"]

[features]
default = ["getrandom"]
getrandom = ["ed448-goldilocks/getrandom"]
static_secrets = []
serde = ["dep:serdect", "ed448-goldilocks/serde"]

[package.metadata.docs.rs]
all-features = true
