[package]
name = "k256_no_std"
version = "0.1.0"
authors = ["RustCrypto Developers"]
edition = "2018"

[dependencies]
k256 = { path = "../../k256", default-features = false }

[features]
arithmetic = ["k256/arithmetic"]
ecdh = ["k256/ecdh"]
ecdsa = ["k256/ecdsa"]
ecdsa-core = ["k256/ecdsa-core"]
keccak256 = ["k256/keccak256"]
pem = ["k256/pem"]
pkcs8 = ["k256/pkcs8"]
sha256 = ["k256/sha256"]
